--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "AnimePahe M3U8 Proxy",
   "version": "1.0.0",
-  "description": "lightweight m3u8 proxy created by tejaspanchall",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -15,7 +14,7 @@
   "keywords": [
     "m3u8",
     "proxy",
-    "CORS",
+    "animepahe",
     "proxy",
     "m3u8"
   ],
