--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
-    "version": 2,
     "builds": [
         {
             "src": "index.js",
             "use": "@vercel/node"
         }
     ],
-    "routes": [
+    "rewrites": [
         {
-        "src": "/(.*)",
-        "dest": "index.js"
+            "source": "/(.*)",
+            "destination": "index.js"
         }
     ]
 }
