--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/tejaspanchall/AnimePahe-M3U8-Proxy",
   "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "cloudscraper": "^4.6.0",
+    "express": "^4.19.2"
   }
 }
